--- a/src/App.css
+++ b/src/App.css
@@ -11849,6 +11849,7 @@ textarea.form-control-lg {
   -webkit-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  margin-bottom: 25px;
 }
 
 img {
