--- a/src/components/BlogPost/BlogPost.scss
+++ b/src/components/BlogPost/BlogPost.scss
@@ -9,6 +9,7 @@
   -webkit-transition: all 0.3s ease;
   -o-transition: all 0.3s ease;
   transition: all 0.3s ease;
+  margin-bottom: 25px;
 }
 
 img {
